--- a/app/views/editForm.scala.html
+++ b/app/views/editForm.scala.html
@@ -1,13 +1,13 @@
-@(postForm: Form[Post])
+@(id: Long, postForm: Form[Post])
 
 @import helper._
 
 
-@main("Create Form") {
+@main("Update Form") {
     
-    <h1>Add a post</h1>
+    <h1>Modify a post</h1>
     
-    @form(routes.Application.savePost()) {
+    @form(routes.Application.updatePost(id)) {
         
         <fieldset>
         
@@ -18,11 +18,14 @@
         </fieldset>
         
         <div class="actions">
-            <input type="submit" value="Save" class="btn primary"> or 
+            <input type="submit" value="Update" class="btn primary"> or 
             <a href="@routes.Application.listPosts()" class="btn">Cancel</a> 
         </div>
         
     }
-    
+
+    @form(routes.Application.deletePost(id), 'class -> "topRight") {
+        <input type="submit" value="Delete this blog post" class="btn danger">
+    }    
 }
 
