--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,9 +5,18 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <!-- // script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script -->
     </head>
     <body>
+        <div id="outer">
+        <div id="conHead">
+            <h1>koeb.me</h1>
+            <p>Yet another unnecessary blog</p>
+            <hr width="500">
+        </div>
+        <div id="content">
         @content
+        </div>
+        </div>
     </body>
 </html>
