some style changes

--- a/app/views/editForm.scala.html
+++ b/app/views/editForm.scala.html
@@ -6,17 +6,24 @@
 @main("Modify an existing post") {
     
     <h1>Modify a post</h1>
-    
+    @form(routes.Application.deletePost(id), 'class -> "topRight") {
+        <input type="submit" value="Delete this blog post" class="btn danger">
+    }
+    <br />    
     @form(routes.Application.updatePost(id)) {
-        
+        <div class="actions">
+            <input type="submit" value="Update" class="btn primary"> or 
+            <a href="@routes.Application.listPosts()" class="btn">Cancel</a> 
+        </div>
+        <br />    
         <fieldset>
         
-            @inputText(postForm("title"), '_label -> "Title")
-            @textarea(postForm("teaser"), args = 'rows -> 10, 'cols -> 80, '_label -> "Teaser Text")
-            @textarea(postForm("text"),  args = 'rows -> 60, 'cols -> 80, '_label -> "Post Body")
+            @inputText(postForm("title"), args = 'size -> 88,'_label -> "Title")
+            @textarea(postForm("teaser"), args = 'rows -> 10, 'cols -> 100, '_label -> "Teaser Text")
+            @textarea(postForm("text"),  args = 'rows -> 10, 'cols -> 100, '_label -> "Post Body")
 
         </fieldset>
-        
+        <br />
         <div class="actions">
             <input type="submit" value="Update" class="btn primary"> or 
             <a href="@routes.Application.listPosts()" class="btn">Cancel</a> 
@@ -24,6 +31,7 @@
         
     }
 
+    <br />    
     @form(routes.Application.deletePost(id), 'class -> "topRight") {
         <input type="submit" value="Delete this blog post" class="btn danger">
     }    
