--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -3,17 +3,24 @@
 @main("koeb.me: things I want to tell the world"){
     <p>&nbsp;</p>
     @flash.get("success").map { message =>
-        <div class="alert-message warning">
-            <strong>Done!</strong> @message
+        <div class="success">
+            <strong>Done!</strong><br/>@message
+        </div>                           
+    }
+    @flash.get("error").map { message =>
+        <div class="error">
+            <strong>Error!</strong><br/>@message
         </div>
     }
     @Option(currentPage.items).filterNot(_.isEmpty).map { postList =>
         @postList.map { post =>
             <h2 class="postTitle">@post.title</h2>
-            <div class="postDate">Posted on @post.created.map(_.format("yyyy-MM-dd")).getOrElse { <em>-</em> }</div>
+            <div class="postDate">Posted on @post.created.map(_.format("yyyy-MM-dd"))</div>
             <div class="postTeaser">@post.teaser</div>
             <p class="postText">@post.text</p>
             <a href="@routes.Application.editPost(post.id.get)" class="postEditLink">Modify</a>
+            <hr width="200">
+            <br />
         }
 
         <div id="pagination" class="pagination">
