--- a/app/views/createForm.scala.html
+++ b/app/views/createForm.scala.html
@@ -7,13 +7,17 @@
     
     <h1>Add a post</h1>
     
-    @form(routes.Application.savePost()) {
+    @form(routes.Blog.savePost()) {
+         <div class="actions">
+            <input type="submit" value="Save" class="btn primary"> or 
+            <a href="@routes.Application.listPosts()" class="btn">Cancel</a> 
+        </div>
         
         <fieldset>
         
-            @inputText(postForm("title"), '_label -> "Title")
-            @textarea(postForm("teaser"), args = 'rows -> 10, 'cols -> 80, '_label -> "Teaser Text")
-            @textarea(postForm("text"),  args = 'rows -> 60, 'cols -> 80, '_label -> "Post Body")
+            @inputText(postForm("title"), args = 'size -> 88,'_label -> "Title")
+            @textarea(postForm("teaser"), args = 'rows -> 10, 'cols -> 100, '_label -> "Teaser Text")
+            @textarea(postForm("text"),  args = 'rows -> 10, 'cols -> 100, '_label -> "Post Body")
 
         </fieldset>
         
