--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -18,7 +18,7 @@
             <div class="postDate">Posted on @post.created.map(_.format("yyyy-MM-dd"))</div>
             <div class="postTeaser">@post.teaser</div>
             <p class="postText">@post.text</p>
-            <a href="@routes.Application.editPost(post.id.get)" class="postEditLink">Modify</a>
+            <a href="@routes.Blog.editPost(post.id.get)" class="postEditLink">Modify</a>
             <hr width="200">
             <br />
         }
