adding static controller and stub pages

--- a/app/views/blog/createForm.scala.html
+++ b/app/views/blog/createForm.scala.html
@@ -10,7 +10,7 @@
     @form(routes.Blog.savePost()) {
          <div class="actions">
             <input type="submit" value="Save" class="btn primary"> or 
-            <a href="@routes.Application.listPosts()" class="btn">Cancel</a> 
+            <a href="@routes.Blog.listPosts()" class="btn">Cancel</a> 
         </div>
         
         <fieldset>
@@ -23,7 +23,7 @@
         
         <div class="actions">
             <input type="submit" value="Save" class="btn primary"> or 
-            <a href="@routes.Application.listPosts()" class="btn">Cancel</a> 
+            <a href="@routes.Blog.listPosts()" class="btn">Cancel</a> 
         </div>
         
     }
