--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,7 +13,11 @@
         <div id="conHead">
             <h1>koeb.me</h1>
             <p>Yet another unnecessary blog</p>
-            <hr width="500">
+            <hr width="500" />
+        </div>
+        <div id="nav">
+        	<a href="@routes.StaticPages.about">About</a>|<a href="@routes.Blog.listPosts(0,10)">Blog</a>|<a href="@routes.StaticPages.contact">Contact</a>
+            <hr width="500" />
         </div>
         
         <div id="content">
