--- a/app/views/blog/editForm.scala.html
+++ b/app/views/blog/editForm.scala.html
@@ -13,7 +13,7 @@
     @form(routes.Blog.updatePost(id)) {
         <div class="actions">
             <input type="submit" value="Update" class="btn primary"> or 
-            <a href="@routes.Application.listPosts()" class="btn">Cancel</a> 
+            <a href="@routes.Blog.listPosts()" class="btn">Cancel</a> 
         </div>
         <br />    
         <fieldset>
@@ -26,7 +26,7 @@
         <br />
         <div class="actions">
             <input type="submit" value="Update" class="btn primary"> or 
-            <a href="@routes.Application.listPosts()" class="btn">Cancel</a> 
+            <a href="@routes.Blog.listPosts()" class="btn">Cancel</a> 
         </div>
         
     }
