--- a/app/views/loginForm.scala.html
+++ b/app/views/loginForm.scala.html
@@ -2,7 +2,7 @@
 
 @import helper._
 @main("Please authenticate to continue", None) {
-	@form(routes.Application.login()) {
+	@form(routes.Application.authenticate()) {
 
         <h1>Sign in</h1>
         
