--- a/app/views/blog/post.scala.html
+++ b/app/views/blog/post.scala.html
@@ -1,4 +1,4 @@
-@(currentPost: Option[Post], nextPost: Option[Post], prevPost: Option[Post], authUser: Option[String])(implicit flash: Flash)
+@(currentPost: Post, nextPost: Option[Post], prevPost: Option[Post], authUser: Option[String])(implicit flash: Flash)
 @import helper._
 @main("koeb.me: things I want to tell the world", authUser){
     <p>&nbsp;</p>
@@ -14,21 +14,19 @@
     }
     	
     
-    @currentPost.map { post => 
-        <h2 class="postTitle">@Html(post.title)</h2>
-        <div class="postDate">Posted on @post.created.map(_.format("yyyy-MM-dd"))</div>
-        <div class="postTeaser">@Html(post.teaser.getOrElse{""})</div>
-        <p class="postText">@Html(post.text)</p>
+    
+    <h2 class="postTitle">@Html(currentPost.title)</h2>
+    <div class="postDate">Posted on @currentPost.created.map(_.format("yyyy-MM-dd"))</div>
+    <div class="postTeaser">@Html(currentPost.teaser.getOrElse{""})</div>
+    <p class="postText">@Html(currentPost.text)</p>
             
-        @if(authUser.isDefined) {
-        <a href="@routes.Blog.editPost(post.id.get)" class="postEditLink">Modify</a><br/>
-        <a href="@routes.Blog.deletePost(post.id.get) class="postEditLink">Delete</a>
-        }
-        <hr width="200">
-        <br />
-    }.getOrElse {
-    	&nbsp;
+    @if(authUser.isDefined) {
+    <a href="@routes.Blog.editPost(currentPost.id.get)" class="postEditLink">Modify</a><br/>
+    <a href="@routes.Blog.deletePost(currentPost.id.get) class="postEditLink">Delete</a>
     }
+    <hr width="200">
+    <br />
+    
 
     <div id="pagination" class="pagination">
         @prevPost.map { post =>
