--- a/app/views/loginForm.scala.html
+++ b/app/views/loginForm.scala.html
@@ -1,7 +1,7 @@
-@(loginForm: Form[(String,String)])(implicit flash: Flash)
+@(loginForm: Form[(String,String)])(implicit flash: Flash, lang: Lang)
 
 @import helper._
-@main("Please authenticate to continue", None) {
+@main(Some("Please authenticate to continue"), None) {
 	@form(routes.Application.authenticate()) {
 
         <h1>Sign in</h1>
