--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,22 +1,21 @@
-@(title: String, authUser: Option[String])(content: Html)
+@(title: Option[String], authUser: Option[String])(content: Html)(implicit lang: Lang)
 <!DOCTYPE html>
 <html>
     <head>
-        <title>@title</title>
+        <title>@title.getOrElse(Messages("application.title"))</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/ico" href="@routes.Assets.at("images/favicon.ico")">
-        <!-- // script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script -->
     </head>
     <body>
         <div id="outer">
         @if(authUser.isDefined) {<div style="text-align:left; position:absolute; margin-top: 20px; margin-left: 20px"><img src="/assets/images/attention.gif" /></div>}
         <div id="conHead">
             <h1>koeb.me</h1>
-            <p>Yet another unnecessary blog</p>
+            <p>Yet another unnecessary website</p>
             <hr width="500" />
         </div>
         <div id="nav">
-        	<a href="@routes.StaticPages.about">About</a>|<a href="@routes.Blog.listPosts(0,10)">Blog</a>|<a href="@routes.StaticPages.contact">Contact</a>
+        	<a href="@routes.StaticPages.about">@Messages("about.name")</a>|<a href="@routes.Blog.listPosts(0,10)">@Messages("blog.name")</a>|<a href="@routes.StaticPages.contact">@Messages("contact.name")</a>
             <hr width="500" />
         </div>
         
