--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -43,6 +43,10 @@ body {
 	padding-left: 15px;
 	padding-right: 15px;
 }
+#content {
+	font-family:Arial, Helvetica, sans-serif;
+	font-size: 14px;
+}
 .postTitle {
     font-weight: bold;
     position: relative;
@@ -93,6 +97,16 @@ body {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     background-color: #D8D8D8;
+}
+.warning {
+    margin: 0 auto;
+    color: yellow;
+    padding: 5px;
+    border: 1px solid yellow;
+    width: 200px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    background-color: #787878;
 }
 .error strong {
     text-align: center;
