--- a/app/views/statics/about.scala.html
+++ b/app/views/statics/about.scala.html
@@ -1,5 +1,6 @@
 @(param: Any)(implicit flash: Flash, lang: Lang)
 @import helper._
+@import views._
 @main(Some(Messages("about.title")), None){
     <p>&nbsp;</p>
     <h1>@Messages("about.title")</h1>
