--- a/app/views/blog/list.scala.html
+++ b/app/views/blog/list.scala.html
@@ -30,9 +30,9 @@
             
             @if(authUser.isDefined) {
               <a href="@routes.Blog.editPost(post.id.get)" class="postEditLink">Modify</a><br/>
-              @helper.form(action = routes.Blog.deletePost(post.id.get)) {
-  		        <button type="submit" name="delete" id="edit" class="postEditLink">Delete</button>
-	          }
+              <form action="https://www.koeb.me/intern/blog/@(post.id.get)/delete" method="POST" class="topRight">
+        		<input type="submit" value="Delete this blog post" class="btn danger">
+    		  </form>
             }
             <hr width="200">
             <br />
