--- a/app/views/blog/post.scala.html
+++ b/app/views/blog/post.scala.html
@@ -22,9 +22,11 @@
             
     @if(authUser.isDefined) {
       <a href="@routes.Blog.editPost(currentPost.id.get)" class="postEditLink">Modify</a><br/>
-      @helper.form(action = routes.Blog.deletePost(currentPost.id.get)) {
-  		<button type="submit" name="delete" id="edit" class="postEditLink">Delete</button>
-	  }
+      
+      <form action="https://www.koeb.me/intern/blog/@(currentPost.id.get)/delete" method="POST" class="topRight">
+           <input type="submit" value="Delete this blog post" class="btn danger">
+      </form>
+	  
     }
     <hr width="200">
     <br />
