bug fix ansible and contact page

--- a/app/views/statics/contact.scala.html
+++ b/app/views/statics/contact.scala.html
@@ -10,7 +10,7 @@
     Bitte entschuldigt dass ich die E-Mail Adresse hier als Bild anzeige, ich möchte damit spam bots das Leben ein wenig schwerer machen.<br />
     Und ihr als meine Leser seid mit Sicherheit in der Lage die E-Mail Adresse abzutippen und seit nicht auf Copy & Paste angewiesen ;-)
     <br />  
-    <img src="@routes.Assets.at("images/favicon.ico")" />
+    <img src="@routes.Assets.at("images/email.gif")" />
     </p>
     <p>
     Ich möchte mir noch den Hinweis erlauben dass ich als Freiberufler tätig bin, und solltet ihr mich für eines Eurer Projekte anheuern wollen so schickt mir gerne Euer Angebot. 
@@ -24,13 +24,14 @@
     Schönhauser Allee 58
     10437 Berlin
     </p>
-    }
-    else {
+
+    } else {
+
     <p>In case you want to send me your opinion to my website or any of its content, or you have some comments, improvements or corrections. or if you simply want to say "Hi!", then I am glad to receive your email.<br />
     Please forgive me the fact that I post my email address as an image, my intention is to make the task of spam bots a little bit more dificult.<br/>
     And I am sure that you guys - being readers of this blog - are smart enough to figure out how to type the email address yourselves, you are not depending on some Copy & Paste mechanism ;-)
     <br />
-    <img src="@routes.Assets.at("images/favicon.ico")" />
+    <img src="@routes.Assets.at("images/email.gif")" />
     </p>
     <p>
     I want to add the note that I am working as freelancer, so in case you want to hire me for one of your projects, please feel free to send me an offer. 
