another ansible bugfix, contact

--- a/app/views/statics/contact.scala.html
+++ b/app/views/statics/contact.scala.html
@@ -20,9 +20,9 @@
     Und um der deutschen Bürokratie genüge zu tun, hier auch meine Postanschrift und ViSdP:<br>
     </p>
     <p>
-    Alexander Köb
-    Schönhauser Allee 58
-    10437 Berlin
+    Alexander Köb<br />
+    Schönhauser Allee 58<br />
+    10437 Berlin<br />
     </p>
 
     } else {
@@ -41,9 +41,9 @@
     For the sake of satisfying German bureaucracy, here is my postal address. Responsible for the content according to German law (ViSdP):<br>
     </p>
     <p>
-    Alexander Köb
-    Schönhauser Allee 58
-    10437 Berlin
+    Alexander Köb<br />
+    Schönhauser Allee 58<br />
+    10437 Berlin<br />
     </p>
     }
 }
